--- a/themes/hugo-type-theme/layouts/partials/head.html
+++ b/themes/hugo-type-theme/layouts/partials/head.html
@@ -16,9 +16,9 @@
 	<link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.ico" type="image/x-icon">
 
 	{{ "<!-- RSS -->" | safeHTML }}
-	{{ if .RSSlink -}}
-	  	<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-	  	<link href="{{ .RSSlink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+	{{ if .RSSLink -}}
+	  	<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+	  	<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 	{{- end }}
 
 	{{ "<!-- Font Awesome -->" | safeHTML }}
